# planetaria

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
ephemeris-data/: README.md  finals.data.txt
novas-wrapper/: CMakeLists.txt
novas-wrapper/NOVAS-C/: README.md
novas-wrapper/NOVAS-C/Cdist/: eph_manager.c
novas-wrapper/src/: astro_calc.cpp  astro_calc.h  astro_time.cpp  astro_time.h  ephemeris.cpp  ephemeris.h  finals_data_handler.cpp  finals_data_handler.h  novas_utils.cpp  novas_utils.h  novas_wrapper.cpp  novas_wrapper.h  slurp_file.cpp  slurp_file.h  vec3.cpp  vec3.h  zbrent.h
planetaria/: CMakeLists.txt
planetaria/src/: main.cpp  planet_utils.cpp  planet_utils.h
